--- a/index.html
+++ b/index.html
@@ -26,9 +26,72 @@
                         <img src="./images/Profile.png" alt="Profile"> Войти
                     </button>
                 </div>
-            </header>    
+            </header>
+            <section class="welcome-content">
+                <div class="welcome-text-cont">
+                    <h1>Обучение<br> программированию</h1>
+                    <p>Интерактивные курсы и уроки по разработке и веб<br> программированию.Научим создавать профессиональные<br> сайты с нуля. Начни обучение сейчас!</p>
+                    <div class="next-btn">
+                        <span>Перейти к курсам</span>
+                        <button class="circle-button">
+                            <img src="./images/Nextbtn.png" width="43px" height="43px" alt="next-btn">
+                        </button>                      
+                    </div>
+                </div>
+                <div>
+                    <img src="./images/pic.png" width="420px" height="auto" alt="pic.png" > 
+                </div>
+            </section>    
+        </div>
+    </div>
+
+    <main class="main">
+        <div class="conteiner">
+            <section class="temple">
+                <img src="./images/temple.png" alt="temple" class="temple-photo">
+                <div class="temple-content">
+                    <img src="./images/uzumaki.png" alt="uzumaki" class="uzumaki">
+                    <div class="temple-element starter">
+                        <div class="temple-el_right">
+                            <h1>01</h1>
+                            <img src="./images/marker.png" height="40px" width="auto" alt="marker">
+                        </div>
+                        <div class="temple-el_left">
+                            <h1>Интерактивное обучение</h1>
+                            <p>Проходи обучение прямо в браузере<br> и мгновенно получай результат</p>
+                        </div>
+                    </div>
+                    <div class="temple-element end">
+                        <div class="temple-el_right">
+                            <h1>02</h1>
+                            <img src="./images/marker.png" height="40px" width="auto" alt="marker">
+                        </div>
+                        <div class="temple-el_left">
+                            <h1>Доступная Цена</h1>
+                            <p>Мы автоматизировали процесс обучения,<br> тем самым обеспечили лучшую цену<br> с сохранением качества курсов</p>
+                        </div>
+                    </div>
+                    <div class="temple-element starter">
+                        <div class="temple-el_right">
+                            <h1>03</h1>
+                            <img src="./images/marker.png" height="40px" width="auto" alt="marker">
+                        </div>
+                        <div class="temple-el_left">
+                            <h1>Уникальные курсы</h1>
+                            <p>Изучай лучшие теории и практики<br> построенные на авторских методах</p>
+                        </div>
+                    </div>
+                    <div class="next-btn end">
+                        <span>Перейти к курсам</span>
+                        <button class="circle-button">
+                            <img src="./images/Nextbtn.png" width="43px" height="43px" alt="next-btn">
+                        </button>                      
+                    </div>
+                </div>
+            </section>
         </div>
         
-    </div>
+    </main>
+
 </body>
 </html>
