foutrh commit(3 main section)

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                         <a href="./courses.html" class="header-links">Курсы</a>
                         <a href="" class="header-links">Комьюнити</a>
                     </nav>
-                    <button class="login-btn">
-                        <img src="./images/Profile.png" alt="Profile"> Войти
-                    </button>
+                    <a href="./courses.html" class="login-btn">
+                        <img src="./images/Profile.png" alt="Profile"><span>Войти</span>
+                    </a>
                 </div>
             </header>
             <section class="welcome-content">
@@ -33,9 +33,9 @@
                     <p>Интерактивные курсы и уроки по разработке и веб<br> программированию.Научим создавать профессиональные<br> сайты с нуля. Начни обучение сейчас!</p>
                     <div class="next-btn">
                         <span>Перейти к курсам</span>
-                        <button class="circle-button">
+                        <a href="./courses.html" class="circle-button">
                             <img src="./images/Nextbtn.png" width="43px" height="43px" alt="next-btn">
-                        </button>                      
+                        </a>                      
                     </div>
                 </div>
                 <div>
@@ -83,14 +83,198 @@
                     </div>
                     <div class="next-btn end">
                         <span>Перейти к курсам</span>
-                        <button class="circle-button">
+                        <a href="./courses.html" class="circle-button">
                             <img src="./images/Nextbtn.png" width="43px" height="43px" alt="next-btn">
-                        </button>                      
+                        </a>                      
                     </div>
                 </div>
             </section>
-        </div>
-        
+            <section class="our-courses">
+                <div class="courses-header">
+                    <h1>Наши курсы</h1>
+                    <a href="./courses.html" class="all-courses">
+                        <span>Смотреть все</span>
+                        <img src="./images/нашикурсы/Arrow - Right 2.png" alt="right">
+                    </a>
+                </div>
+                <div class="courses-card">
+                    <div class="courses-bloock">
+                        <div class="left-sider">
+                            <div class="topper">
+                                <h2>HTML Advanced</h2>
+                                <div class="reiting">
+                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
+                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
+                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
+                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
+                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
+                                </div>
+                                <div class="new-course">
+                                    <img src="./images/нашикурсы/surface1.png" alt="icon">
+                                    <span>Новый</span>
+                                </div>
+                                <div class="course-price">
+                                    <img src="./images/нашикурсы/coin 1.png" alt="icon">
+                                    <span>150 токенов</span>
+                                </div>
+                            </div>
+                            <a class="continue-to" href="./course_about.html">
+                                <span>Подробнее</span>
+                                <img src="./images/нашикурсы/Arrow - Right.png" alt="icon">
+                            </a>
+                        </div>
+                        <div class="right-sider">
+                            <img src="./images/нашикурсы/html-5.png" alt="icon">
+                        </div>
+                    </div>
+                    <div class="courses-bloock">
+                        <div class="left-sider">
+                            <div class="topper">
+                                <h2>HTML Advanced</h2>
+                                <div class="reiting">
+                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
+                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
+                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
+                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
+                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
+                                </div>
+                                <div class="new-course">
+                                    <img src="./images/нашикурсы/surface1.png" alt="icon">
+                                    <span>Новый</span>
+                                </div>
+                                <div class="course-price">
+                                    <img src="./images/нашикурсы/coin 1.png" alt="icon">
+                                    <span>150 токенов</span>
+                                </div>
+                            </div>
+                            <a class="continue-to" href="./course_about.html">
+                                <span>Подробнее</span>
+                                <img src="./images/нашикурсы/Arrow - Right.png" alt="icon">
+                            </a>
+                        </div>
+                        <div class="right-sider">
+                            <img src="./images/нашикурсы/html-5.png" alt="icon">
+                        </div>
+                    </div>                    
+                    <div class="courses-bloock">
+                        <div class="left-sider">
+                            <div class="topper">
+                                <h2>HTML Advanced</h2>
+                                <div class="reiting">
+                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
+                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
+                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
+                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
+                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
+                                </div>
+                                <div class="new-course">
+                                    <img src="./images/нашикурсы/surface1.png" alt="icon">
+                                    <span>Новый</span>
+                                </div>
+                                <div class="course-price">
+                                    <img src="./images/нашикурсы/coin 1.png" alt="icon">
+                                    <span>150 токенов</span>
+                                </div>
+                            </div>
+                            <a class="continue-to" href="./course_about.html">
+                                <span>Подробнее</span>
+                                <img src="./images/нашикурсы/Arrow - Right.png" alt="icon">
+                            </a>
+                        </div>
+                        <div class="right-sider">
+                            <img src="./images/нашикурсы/html-5.png" alt="icon">
+                        </div>
+                    </div>                    
+                    <div class="courses-bloock">
+                        <div class="left-sider">
+                            <div class="topper">
+                                <h2>HTML Advanced</h2>
+                                <div class="reiting">
+                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
+                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
+                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
+                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
+                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
+                                </div>
+                                <div class="new-course">
+                                    <img src="./images/нашикурсы/surface1.png" alt="icon">
+                                    <span>Новый</span>
+                                </div>
+                                <div class="course-price">
+                                    <img src="./images/нашикурсы/coin 1.png" alt="icon">
+                                    <span>150 токенов</span>
+                                </div>
+                            </div>
+                            <a class="continue-to" href="./course_about.html">
+                                <span>Подробнее</span>
+                                <img src="./images/нашикурсы/Arrow - Right.png" alt="icon">
+                            </a>
+                        </div>
+                        <div class="right-sider">
+                            <img src="./images/нашикурсы/html-5.png" alt="icon">
+                        </div>
+                    </div>                    
+                    <div class="courses-bloock">
+                        <div class="left-sider">
+                            <div class="topper">
+                                <h2>HTML Advanced</h2>
+                                <div class="reiting">
+                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
+                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
+                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
+                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
+                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
+                                </div>
+                                <div class="new-course">
+                                    <img src="./images/нашикурсы/surface1.png" alt="icon">
+                                    <span>Новый</span>
+                                </div>
+                                <div class="course-price">
+                                    <img src="./images/нашикурсы/coin 1.png" alt="icon">
+                                    <span>150 токенов</span>
+                                </div>
+                            </div>
+                            <a class="continue-to" href="./course_about.html">
+                                <span>Подробнее</span>
+                                <img src="./images/нашикурсы/Arrow - Right.png" alt="icon">
+                            </a>
+                        </div>
+                        <div class="right-sider">
+                            <img src="./images/нашикурсы/html-5.png" alt="icon">
+                        </div>
+                    </div>                    
+                    <div class="courses-bloock">
+                        <div class="left-sider">
+                            <div class="topper">
+                                <h2>HTML Advanced</h2>
+                                <div class="reiting">
+                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
+                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
+                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
+                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
+                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
+                                </div>
+                                <div class="new-course">
+                                    <img src="./images/нашикурсы/surface1.png" alt="icon">
+                                    <span>Новый</span>
+                                </div>
+                                <div class="course-price">
+                                    <img src="./images/нашикурсы/coin 1.png" alt="icon">
+                                    <span>150 токенов</span>
+                                </div>
+                            </div>
+                            <a class="continue-to" href="./course_about.html">
+                                <span>Подробнее</span>
+                                <img src="./images/нашикурсы/Arrow - Right.png" alt="icon">
+                            </a>
+                        </div>
+                        <div class="right-sider">
+                            <img src="./images/нашикурсы/html-5.png" alt="icon">
+                        </div>
+                    </div>                    
+                </div>
+            </section>
+        </div>    
     </main>
 
 </body>
