fiveth commit(3 full section)

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <a href="./courses.html" class="header-links">Курсы</a>
                         <a href="" class="header-links">Комьюнити</a>
                     </nav>
-                    <a href="./courses.html" class="login-btn">
+                    <a href="" class="login-btn">
                         <img src="./images/Profile.png" alt="Profile"><span>Войти</span>
                     </a>
                 </div>
@@ -89,7 +89,12 @@
                     </div>
                 </div>
             </section>
-            <section class="our-courses">
+            
+        </div>
+        <div class="absolute-for-course">
+            <img src="./images/нашикурсы/bcthing.png" alt="" class="courses-cards-back">
+            <div class="conteiner">
+                <section class="our-courses">
                 <div class="courses-header">
                     <h1>Наши курсы</h1>
                     <a href="./courses.html" class="all-courses">
@@ -97,7 +102,7 @@
                         <img src="./images/нашикурсы/Arrow - Right 2.png" alt="right">
                     </a>
                 </div>
-                <div class="courses-card">
+                <div class="courses-cards">
                     <div class="courses-bloock">
                         <div class="left-sider">
                             <div class="topper">
@@ -109,13 +114,15 @@
                                     <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
                                     <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
                                 </div>
-                                <div class="new-course">
-                                    <img src="./images/нашикурсы/surface1.png" alt="icon">
-                                    <span>Новый</span>
-                                </div>
-                                <div class="course-price">
-                                    <img src="./images/нашикурсы/coin 1.png" alt="icon">
-                                    <span>150 токенов</span>
+                                <div class="course-meta">
+                                    <div class="new-course">
+                                        <img src="./images/нашикурсы/surface1.png" alt="icon">
+                                        <span>Новый</span>
+                                    </div>
+                                    <div class="course-price">
+                                        <img src="./images/нашикурсы/coin 1.png" alt="icon">
+                                        <span>150 токенов</span>
+                                    </div>
                                 </div>
                             </div>
                             <a class="continue-to" href="./course_about.html">
@@ -127,39 +134,35 @@
                             <img src="./images/нашикурсы/html-5.png" alt="icon">
                         </div>
                     </div>
-                    <div class="courses-bloock">
+                    <div class="courses-bloock secondback">
                         <div class="left-sider">
                             <div class="topper">
-                                <h2>HTML Advanced</h2>
-                                <div class="reiting">
-                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
-                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
-                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
-                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
-                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
-                                </div>
-                                <div class="new-course">
-                                    <img src="./images/нашикурсы/surface1.png" alt="icon">
-                                    <span>Новый</span>
-                                </div>
-                                <div class="course-price">
-                                    <img src="./images/нашикурсы/coin 1.png" alt="icon">
-                                    <span>150 токенов</span>
+                                <h2>Vuetify Advanced</h2>
+                                <p>Пока нет оценок</p>
+                                <div class="course-meta">
+                                    <div class="new-course">
+                                        <img src="./images/нашикурсы/surface1.png" alt="icon">
+                                        <span>Новый</span>
+                                    </div>
+                                    <div class="course-price">
+                                        <img src="./images/нашикурсы/coin 1.png" alt="icon">
+                                        <span>150 токенов</span>
+                                    </div>
                                 </div>
                             </div>
                             <a class="continue-to" href="./course_about.html">
-                                <span>Подробнее</span>
+                                <span class="opacityspan" >Подробнее</span>
                                 <img src="./images/нашикурсы/Arrow - Right.png" alt="icon">
                             </a>
                         </div>
                         <div class="right-sider">
-                            <img src="./images/нашикурсы/html-5.png" alt="icon">
+                            <img src="./images/нашикурсы/VA icon.png" alt="icon">
                         </div>
                     </div>                    
                     <div class="courses-bloock">
                         <div class="left-sider">
                             <div class="topper">
-                                <h2>HTML Advanced</h2>
+                                <h2>Python Advanced</h2>
                                 <div class="reiting">
                                     <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
                                     <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
@@ -167,28 +170,92 @@
                                     <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
                                     <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
                                 </div>
-                                <div class="new-course">
-                                    <img src="./images/нашикурсы/surface1.png" alt="icon">
-                                    <span>Новый</span>
-                                </div>
-                                <div class="course-price">
-                                    <img src="./images/нашикурсы/coin 1.png" alt="icon">
-                                    <span>150 токенов</span>
+                                <div class="course-meta">
+                                    <div class="new-course">
+                                        <img src="./images/нашикурсы/surface1.png" alt="icon">
+                                        <span>Новый</span>
+                                    </div>
+                                    <div class="course-price">
+                                        <img src="./images/нашикурсы/coin 1.png" alt="icon">
+                                        <span>150 токенов</span>
+                                    </div>
                                 </div>
                             </div>
                             <a class="continue-to" href="./course_about.html">
-                                <span>Подробнее</span>
+                                <span class="opacityspan">Подробнее</span>
                                 <img src="./images/нашикурсы/Arrow - Right.png" alt="icon">
                             </a>
                         </div>
                         <div class="right-sider">
-                            <img src="./images/нашикурсы/html-5.png" alt="icon">
+                            <img src="./images/нашикурсы/python.png" alt="icon">
+                        </div>
+                    </div>                    
+                    <div class="courses-bloock fourback">
+                        <div class="left-sider">
+                            <div class="topper">
+                                <h2>CSS Advanced</h2>
+                                <div class="reiting">
+                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
+                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
+                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
+                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
+                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
+                                </div>
+                                <div class="course-meta">
+                                    <div class="course-price">
+                                        <img src="./images/нашикурсы/coin 1.png" alt="icon">
+                                        <span>150 токенов</span>
+                                    </div>
+                                    <div class="new-course hidden">
+                                        <img src="./images/нашикурсы/surface1.png" alt="icon">
+                                        <span>Новый</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <a class="continue-to" href="./course_about.html">
+                                <span class="opacityspan">Подробнее</span>
+                                <img src="./images/нашикурсы/Arrow - Right.png" alt="icon">
+                            </a>
+                        </div>
+                        <div class="right-sider">
+                            <img src="./images/нашикурсы/css-3.png" alt="icon">
+                        </div>
+                    </div>                    
+                    <div class="courses-bloock fiveback">
+                        <div class="left-sider">
+                            <div class="topper">
+                                <h2>Bootstrap</h2>
+                                <div class="reiting">
+                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
+                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
+                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
+                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
+                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
+                                </div>
+                                <div class="course-meta">
+                                    <div class="course-price">
+                                        <img src="./images/нашикурсы/coin 1.png" alt="icon">
+                                        <span>150 токенов</span>
+                                    </div>
+                                    <div class="new-course hidden">
+                                        <img src="./images/нашикурсы/surface1.png" alt="icon">
+                                        <span>Новый</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <a class="continue-to" href="./course_about.html">
+                                <span class="opacityspan">Подробнее</span>
+                                <img src="./images/нашикурсы/Arrow - Right.png" alt="icon">
+                            </a>
+                        </div>
+                        <div class="right-sider">
+                            <img src="./images/нашикурсы/Bootstrap.png" alt="icon">
                         </div>
                     </div>                    
                     <div class="courses-bloock">
                         <div class="left-sider">
                             <div class="topper">
-                                <h2>HTML Advanced</h2>
+                                <h2>Javascript</h2>
                                 <div class="reiting">
                                     <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
                                     <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
@@ -196,84 +263,29 @@
                                     <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
                                     <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
                                 </div>
-                                <div class="new-course">
-                                    <img src="./images/нашикурсы/surface1.png" alt="icon">
-                                    <span>Новый</span>
-                                </div>
-                                <div class="course-price">
-                                    <img src="./images/нашикурсы/coin 1.png" alt="icon">
-                                    <span>150 токенов</span>
+                                <div class="course-meta">
+                                    <div class="new-course">
+                                        <img src="./images/нашикурсы/surface1.png" alt="icon">
+                                        <span>Новый</span>
+                                    </div>
+                                    <div class="course-price">
+                                        <img src="./images/нашикурсы/coin 1.png" alt="icon">
+                                        <span>150 токенов</span>
+                                    </div>
                                 </div>
                             </div>
                             <a class="continue-to" href="./course_about.html">
-                                <span>Подробнее</span>
+                                <span class="opacityspan">Подробнее</span>
                                 <img src="./images/нашикурсы/Arrow - Right.png" alt="icon">
                             </a>
                         </div>
                         <div class="right-sider">
-                            <img src="./images/нашикурсы/html-5.png" alt="icon">
-                        </div>
-                    </div>                    
-                    <div class="courses-bloock">
-                        <div class="left-sider">
-                            <div class="topper">
-                                <h2>HTML Advanced</h2>
-                                <div class="reiting">
-                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
-                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
-                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
-                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
-                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
-                                </div>
-                                <div class="new-course">
-                                    <img src="./images/нашикурсы/surface1.png" alt="icon">
-                                    <span>Новый</span>
-                                </div>
-                                <div class="course-price">
-                                    <img src="./images/нашикурсы/coin 1.png" alt="icon">
-                                    <span>150 токенов</span>
-                                </div>
-                            </div>
-                            <a class="continue-to" href="./course_about.html">
-                                <span>Подробнее</span>
-                                <img src="./images/нашикурсы/Arrow - Right.png" alt="icon">
-                            </a>
-                        </div>
-                        <div class="right-sider">
-                            <img src="./images/нашикурсы/html-5.png" alt="icon">
-                        </div>
-                    </div>                    
-                    <div class="courses-bloock">
-                        <div class="left-sider">
-                            <div class="topper">
-                                <h2>HTML Advanced</h2>
-                                <div class="reiting">
-                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
-                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
-                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
-                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
-                                    <img src="./images/нашикурсы/star.png" alt="icon" class="reiting-star">
-                                </div>
-                                <div class="new-course">
-                                    <img src="./images/нашикурсы/surface1.png" alt="icon">
-                                    <span>Новый</span>
-                                </div>
-                                <div class="course-price">
-                                    <img src="./images/нашикурсы/coin 1.png" alt="icon">
-                                    <span>150 токенов</span>
-                                </div>
-                            </div>
-                            <a class="continue-to" href="./course_about.html">
-                                <span>Подробнее</span>
-                                <img src="./images/нашикурсы/Arrow - Right.png" alt="icon">
-                            </a>
-                        </div>
-                        <div class="right-sider">
-                            <img src="./images/нашикурсы/html-5.png" alt="icon">
+                            <img src="./images/нашикурсы/javascript.png" alt="icon">
                         </div>
                     </div>                    
                 </div>
             </section>
+            </div>
         </div>    
     </main>
 
