seventh commit(main without footer)

--- a/index.html
+++ b/index.html
@@ -326,7 +326,48 @@
             <section class="feedback-from-students">
                 <h1>Отзывы наших выпускников</h1>
                 <div class="feedback-cards">
-                    
+                    <div class="feedback-card">
+                        <div class="feedback-top_content">
+                            <img src="./images/Отзывыстудентов/“.png" alt="icon" class="apostroph">
+                            <p >Звание: <span>Самурай</span></p>
+                            <p class="opacityspan">В своём стремлении повысить качество жизни, они забывают, что высокотехнологичная концепция общественного.</p>
+                        </div>
+                        <div class="feedback-author">
+                            <img src="./images/Отзывыстудентов/billy.jpg" alt="icon" class="feedback-avatar">
+                            <div class="author-name">
+                                <h3>Билли Херингтон</h3>
+                                <p class="opacityspan" >The Legend</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="feedback-card darksamurai">
+                        <div class="feedback-top_content">
+                            <img src="./images/Отзывыстудентов/“.png" alt="icon" class="apostroph">
+                            <p>Звание: <span>Самурай</span></p>
+                            <p class="opacityspan">В своём стремлении повысить качество жизни, они забывают, что высокотехнологичная концепция общественного.</p>
+                        </div>
+                        <div class="feedback-author">
+                            <img src="./images/Отзывыстудентов/diddy.jpg" alt="icon" class="feedback-avatar">
+                            <div class="author-name">
+                                <h3>Mr Pi Diddy</h3>
+                                <p class="opacityspan">The best</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="feedback-card ninja">
+                        <div class="feedback-top_content">
+                            <img src="./images/Отзывыстудентов/“.png" alt="icon" class="apostroph">
+                            <p>Звание: <span>Самурай</span></p>
+                            <p class="opacityspan">В своём стремлении повысить качество жизни, они забывают, что высокотехнологичная концепция общественного.</p>
+                        </div>
+                        <div class="feedback-author">
+                            <img src="./images/Отзывыстудентов/sj.jpg" alt="icon" class="feedback-avatar">
+                            <div class="author-name">
+                                <h3>Spartak SJ</h3>
+                                <p class="opacityspan">Body Profi</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
         </div>
